<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Mtk Easy Su</string>
    <string name="about">
        This app helps you use mtk-su to launch Magisk on compatible devices,
        including locked-down ones! It runs entirely from the data partition: no
        need to modify the firmware. Root is available for any app that wants it.
        But to manage root access for each application, you must download Magisk Manager.
    </string>
    <string name="startup_warning">
        Misuse of superuser access can seriously damage your device, moreover you are fully responsible for your device.
    </string>
    <string name="warning">
        Do not update Magisk through Magisk Manager on a locked bootloader or you will brick your device. Additionally,
        I am not liable for any kind of damage to your device.
    </string>
    <string name="executing_script">Executing script…</string>
    <string name="please_wait">Please wait…</string>
    <string name="donate_url" translatable="false">https://github.com/sponsors/JunioJsv</string>
    <string name="github_url" translatable="false">https://github.com/JunioJsv/mtk-easy-su</string>
    <string name="github_api_entry" translatable="false">https://api.github.com/</string>
    <string name="xda_url" translatable="false">https://forum.xda-developers.com/android/development/amazing-temp-root-mediatek-armv8-t3922213/post82081703#post82081703</string>
    <string name="version">Version</string>
    <string name="success">Superuser permission granted, use Magisk Manager to manage :)</string>
    <string name="fail">"Failed, retrying won't help - not supported :( "</string>
    <string name="accept">Accept</string>
    <string name="about_word">About</string>
    <string name="credits">Credits</string>
    <string name="john_wu_about">John Wu\nDeveloper of Magisk</string>
    <string name="juniojsv_about">JunioJsv\nCreator of this app</string>
    <string name="mtk_su">Diplomatic\nDeveloper of mtk-su</string>
    <string name="preferences">Preferences</string>
    <string name="log">Log</string>
    <string name="log_null" translatable="false">$</string>
    <string name="github" translatable="false">Github</string>
    <string name="warning_word">Warning</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="copy">Copy</string>
    <string name="xda">Xda forum</string>
    <string name="donate">Donate</string>
    <string name="run_as_64_bits">Run as 64 Bits</string>
    <string name="new_version_available">New version available</string>
    <string name="download">Download</string>
    <string name="close">Close</string>
    <string name="security_patch_warning">The security patch date is after March 2020. Please try again after a firmware downgrade</string>
    <string name="ignore">Ignore</string>
    <string name="terminal">Terminal</string>
    <string name="auto_send_logs">Accept submission of execution logs</string>
    <string name="boot_run" >Run on Boot</string>
    <string name="kocleo" translatable="false">KoCleo</string>
    <string name="kocleo_about">Refactor MD UI, add features</string>
    <string name="bilibili" translatable="false">BiliBili</string>
    <string name="titleResId">My BiliBili Space</string>
    <string name="bilibili_url" translatable="false">https://b23.tv/9mAd3lU</string>
    <string name="fail_2">Still not working? Your device isn\'t supported :(</string>
</resources>
